--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Flashcard</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
             <div class="cartao__conteudo">
                 <h3>Geografia</h3>
                 <div class="cartao__conteudo__pergunta">
-                    Qual a capital do Brasil?
+                   <p> Qual a capital do Brasil?</p>
                 <div class="cartao__conteudo__resposta">
-                    Brasília
+                   <p>Brasília</p> 
                 </div>
                 </div>
             </div>
@@ -24,17 +24,29 @@
             <div class="cartao__conteudo">
                 <h3>Biologia</h3>
                 <div class="cartao__conteudo__pergunta">
-                    Qual o único musculo do corpo humano que tem movimentação involuntária constante?
+                    <p>Qual o único musculo do corpo humano que tem movimentação involuntária constante?</p>
                 <div class="cartao__conteudo__resposta">
-                    Coração
+                   <p> Coração </p>
                 </div>
                 </div>
             </div>
         </article>
+    </article>
+    <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Biologia</h3>
+            <div class="cartao__conteudo__pergunta">
+                <p>Qual o animal que possui 3 corações?</p>
+            <div class="cartao__conteudo__resposta">
+               <p> Polvo </p>
+            </div>
+            </div>
+        </div>
+    </article>
       </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
     </footer>
 
 </body>
