--- a/index.html
+++ b/index.html
@@ -8,46 +8,44 @@
 </head>
 <body>
     <main>
-      <section id="container"> 
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Geografia</h3>
-                <div class="cartao__conteudo__pergunta">
-                   <p> Qual a capital do Brasil?</p>
-                <div class="cartao__conteudo__resposta">
-                   <p>Brasília</p> 
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Geografia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual é a capital do Brasil</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Brasília</p>
+                    </div>
                 </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Biologia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual é o único músculo do corpo humano que tem movimentação involuntária constante?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>Coração</p>
+                    </div>
                 </div>
-            </div>
-        </article>
-        <article class="cartao">
-            <div class="cartao__conteudo">
-                <h3>Biologia</h3>
-                <div class="cartao__conteudo__pergunta">
-                    <p>Qual o único musculo do corpo humano que tem movimentação involuntária constante?</p>
-                <div class="cartao__conteudo__resposta">
-                   <p> Coração </p>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Biologia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual é o animal que possui 3 corações?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>Polvo</p>
+                    </div>
                 </div>
-                </div>
-            </div>
-        </article>
-    </article>
-    <article class="cartao">
-        <div class="cartao__conteudo">
-            <h3>Biologia</h3>
-            <div class="cartao__conteudo__pergunta">
-                <p>Qual o animal que possui 3 corações?</p>
-            <div class="cartao__conteudo__resposta">
-               <p> Polvo </p>
-            </div>
-            </div>
-        </div>
-    </article>
-      </section>
+            </article>
+        </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
-
 </body>
 </html>
