--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="cartao__conteudo">
                     <h3>Geografia</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual é a capital do Brasil</p>
+                        <p>Qual é a capital do Brasil?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
                         <p>Brasília</p>
