--- a/index.html
+++ b/index.html
@@ -9,43 +9,23 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
+            <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Geografia</h3>
+                    <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual é a capital do Brasil?</p>
+                        <p>O que é JavaScript?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>Brasília</p>
+                        <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Biologia</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Qual é o único músculo do corpo humano que tem movimentação involuntária constante?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    <p>Coração</p>
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Biologia</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Qual é o animal que possui 3 corações?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    <p>Polvo</p>
-                    </div>
-                </div>
-            </article>
+            </article> -->
         </section>
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
