--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <section id="container">
             <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Geografia</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>Qual a capital do Brasil?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>Brasília</p>
                     </div>
                 </div>
             </article> -->
